--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 images/* filter=lfs diff=lfs merge=lfs -text
+*.mp4 filter=lfs diff=lfs merge=lfs -text
+images/Debuts/SameDay[[:space:]]15[[:space:]]da[[:space:]]Isa.mp4 filter=lfs diff=lfs merge=lfs -text
